@@ -14,10 +14,13 @@ apply plugin: 'opensearch.internal-cluster-test'
 opensearchplugin {
   description = 'Arrow flight based transport and stream implementation. It also provides Arrow vector and memory dependencies as' +
     'an extended-plugin at runtime; consumers should take a compile time dependency and not runtime on this project.\'\n'
-  classname = 'org.opensearch.arrow.flight.bootstrap.FlightStreamPlugin'
+  classname = 'org.opensearch.arrow.flight.transport.FlightStreamPlugin'
 }
 
 dependencies {
+  // Javassist for bytecode injection chaos testing
+  internalClusterTestImplementation 'org.javassist:javassist:3.29.2-GA'
+
   // all transitive dependencies exported to use arrow-vector and arrow-memory-core
   api "org.apache.arrow:arrow-memory-netty:${versions.arrow}"
   api "org.apache.arrow:arrow-memory-core:${versions.arrow}"
@@ -83,6 +86,7 @@ test {
   systemProperty 'io.netty.noUnsafe', 'false'
   systemProperty 'io.netty.tryUnsafe', 'true'
   systemProperty 'io.netty.tryReflectionSetAccessible', 'true'
+  jvmArgs += ["--add-opens", "java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"]
 }
 
 internalClusterTest {
